--- a/productos.html
+++ b/productos.html
@@ -94,7 +94,7 @@
     <script>
         async function loadProducts() {
             try {
-                const response = await fetch('https://api_backend_gerardo.onrender.com/api/products');
+                const response = await fetch('https://api-backend-ndmt.onrender.com/api/products');
                 if (!response.ok) throw new Error('Network response was not ok');
                 const products = await response.json();
                 const productList = document.getElementById('product-list');
