Actualizacion del frontend

--- a/formulario.html
+++ b/formulario.html
@@ -109,9 +109,9 @@
                         title: 'Pago Móvil',
                         html: `
                             <p>Realice el pago móvil a este número: <strong>1234-5678</strong></p>
-                            <p>Cédula: <strong>V-12345678</strong></p>
-                            <p>Banco: <strong>Banco Ejemplo</strong></p>
-                            <p>Teléfono de contacto: <strong>0987-654321</strong></p>
+                            <p>Cédula: <strong>V-28484435</strong></p>
+                            <p>Banco: <strong>Banco de venezuela</strong></p>
+                            <p>Teléfono de contacto: <strong>04129058639</strong></p>
                             <p>Una vez realizado el pago, se le informará la confirmación a su correo electrónico.</p>
                         `,
                         icon: 'info',
