Actualizacion del frontend

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h5>Escoba para el hogar sencilla</h5>
                 <h4>$6</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping  "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping  "></i></a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                 <h5>Cubeta de agua para el baño</h5>
                 <h4>$8</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping  "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping  "></i></a>
                 </div>
             </div>
         </div>
@@ -116,26 +116,13 @@
                 <h5>conjunto de 10 tenedores</h5>
                 <h4>$4</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping  "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping  "></i></a>
                 </div>
             </div>
         </div>
         <!-- Fin de la tarjeta 3 -->
 
        
-        <div class="pro">
-            <img src="img/productos/escoba.jpg" alt="">
-            <div class="des">
-                <span>vasos de plastico</span>
-                <h5>conjunto de 30 vasos de plastico</h5>
-                <h4>$9</h4>
-                <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping  "></i></a>
-                </div>
-            </div>
-        </div>
-
-
 
 
         <div class="pro">
@@ -145,7 +132,7 @@
                 <h5></h5>
                 <h4>$10</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping "></i></a>
                 </div>
             </div>
         </div>
@@ -157,7 +144,7 @@
                 <h5></h5>
                 <h4>$10</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping "></i></a>
                 </div>
             </div>
         </div>
@@ -169,7 +156,7 @@
                 <h5></h5>
                 <h4>$10</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping "></i></a>
                 </div>
             </div>
         </div>
@@ -181,7 +168,7 @@
                 <h5></h5>
                 <h4>$10</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping "></i></a>
                 </div>
             </div>
         </div>
@@ -190,10 +177,10 @@
             <img src="img/productos/cubiertosmix.jpg" alt="">
             <div class="des">
                 <span>mix de cubiertos</span>
-                <h5>conjunto de 10 cubiertos cada uno</h5>
+                <h5></h5>
                 <h4>$10</h4>
                 <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
+                    <a href="productos.html"> <i class="fa-solid fa-cart-shopping "></i></a>
                 </div>
             </div>
         </div>
