--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         <!-- Inicio de la tarjeta 2 -->
         <div class="pro">
-            <img src="img/productos/escoba.jpg" alt="">
+            <img src="img/productos/cubeta.htm" alt="">
             <div class="des">
                 <span>Cubeta de agua</span>
                 <h5>Cubeta de agua para el baño</h5>
@@ -238,7 +238,7 @@
 
         <!-- Inicio de la tarjeta 3 -->
         <div class="pro">
-            <img src="img/productos/escoba.jpg" alt="">
+            <img src="img/productos/tenedores.jpg" alt="">
             <div class="des">
                 <span> tenedores de plastico</span>
                 <h5>conjunto de 10 tenedores</h5>
@@ -251,26 +251,13 @@
         <!-- Fin de la tarjeta 3 -->
 
        
-        <div class="pro">
-            <img src="img/productos/escoba.jpg" alt="">
-            <div class="des">
-                <span>vasos de plastico</span>
-                <h5>conjunto de 30 vasos de plastico</h5>
-                <h4>$9</h4>
-                <div class="cart">
-                    <a href="#"> <i class="fa-solid fa-cart-shopping  "></i></a>
-                </div>
-            </div>
-        </div>
-
-
 
 
         <div class="pro">
             <img src="img/productos/cubiertosmix.jpg" alt="">
             <div class="des">
                 <span>mix de cubiertos</span>
-                <h5></h5>
+                <h5>Cubiertos de 10 cada uno</h5>
                 <h4>$10</h4>
                 <div class="cart">
                     <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
@@ -282,7 +269,7 @@
             <img src="img/productos/cubiertosmix.jpg" alt="">
             <div class="des">
                 <span>mix de cubiertos</span>
-                <h5></h5>
+                <h5>Cubiertos de 10 cada uno</h5>
                 <h4>$10</h4>
                 <div class="cart">
                     <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
@@ -294,7 +281,7 @@
             <img src="img/productos/cubiertosmix.jpg" alt="">
             <div class="des">
                 <span>mix de cubiertos</span>
-                <h5></h5>
+                <h5>Cubiertos de 10 cada uno</h5>
                 <h4>$10</h4>
                 <div class="cart">
                     <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
@@ -306,7 +293,7 @@
             <img src="img/productos/cubeta2.jpg" alt="">
             <div class="des">
                 <span>mix de cubiertos</span>
-                <h5></h5>
+                <h5>Cubiertos de 10 cada uno</h5>
                 <h4>$10</h4>
                 <div class="cart">
                     <a href="#"> <i class="fa-solid fa-cart-shopping "></i></a>
