--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         <!-- Inicio de la tarjeta 2 -->
         <div class="pro">
-            <img src="img/productos/cubeta.htm" alt="">
+            <img src="img/productos/cubeta.png" alt="">
             <div class="des">
                 <span>Cubeta de agua</span>
                 <h5>Cubeta de agua para el baño</h5>
